# backup-airtable

./: .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml
airtable_export/: cli.py  cli_v2.py
backup_airtable/: cli.py
tests/: test_backup_airtable.py
